# fire-smoke-detection

./: CMakeLists.txt  README  README.md  fire-smoke-detection.cpp
